# habiticad

./: .envrc  README.md  default.nix  flake.nix  habiticad.cabal
app/: Main.hs
